--- a/ngraph/frontend/paddlepaddle/CMakeLists.txt
+++ b/ngraph/frontend/paddlepaddle/CMakeLists.txt
@@ -76,7 +76,7 @@ endif()
 
 link_system_libraries(${TARGET_NAME} PRIVATE ${Protobuf_LIBRARIES})
 
-target_link_libraries(${TARGET_NAME} PRIVATE frontend_manager
+target_link_libraries(${TARGET_NAME} PRIVATE ngraph::frontend_manager::static
                                      PRIVATE ngraph::builder)
 
 add_clang_format_target(${TARGET_NAME}_clang FOR_TARGETS ${TARGET_NAME}
