--- a/tests/stress_tests/common/CMakeLists.txt
+++ b/tests/stress_tests/common/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library(${TARGET_NAME} STATIC ${SRC} ${HDR})
 
 target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-if(EXISTS "${OpenVINO_SOURCE_DIR}/thirdparty/gflags")
+if(EXISTS "${OpenVINO_SOURCE_DIR}/inference-engine/samples/thirdparty/gflags")
     function(add_gflags)
         set(GFLAGS_IS_SUBPROJECT TRUE)
         set(HAVE_SYS_STAT_H 1)
@@ -19,7 +19,7 @@ if(EXISTS "${OpenVINO_SOURCE_DIR}/thirdparty/gflags")
         set(INTTYPES_FORMAT C99)
         set(BUILD_TESTING OFF)
         set(BUILD_SHARED_LIBS OFF)
-        add_subdirectory(${OpenVINO_SOURCE_DIR}/thirdparty/gflags
+        add_subdirectory(${OpenVINO_SOURCE_DIR}/inference-engine/samples/thirdparty/gflags
                          ${CMAKE_CURRENT_BINARY_DIR}/gflags_build
                          EXCLUDE_FROM_ALL)
         set_target_properties(gflags_nothreads_static PROPERTIES FOLDER thirdparty)
