revert unwanted changes

--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -176,6 +176,7 @@ set(SRC
     type_prop/prior_box.cpp
     type_prop/proposal.cpp
     type_prop/psroi_pooling.cpp
+    type_prop/prior_box_clustered.cpp
     type_prop/range.cpp
     type_prop/read_value.cpp
     type_prop/reduce_l1.cpp
@@ -278,6 +279,7 @@ set(SRC
     visitors/op/pad.cpp
     visitors/op/parameter.cpp
     visitors/op/prior_box.cpp
+    visitors/op/prior_box_clustered.cpp
     visitors/op/proposal.cpp
     visitors/op/psroi_pooling.cpp
     visitors/op/reduce_l1.cpp
@@ -405,6 +407,7 @@ set(MULTI_TEST_SRC
     backend/dft.in.cpp
     backend/divide.in.cpp
     backend/deformable_convolution.in.cpp
+    backend/deformable_convolution_opset8.in.cpp
     backend/depth_to_space.in.cpp
     backend/dyn_reshape.in.cpp
     backend/experimental_detectron_generate_proposals.in.cpp
@@ -416,6 +419,7 @@ set(MULTI_TEST_SRC
     backend/exp.in.cpp
     backend/experimental_detectron_detection_output.in.cpp
     backend/experimental_detectron_prior_grid.in.cpp
+    backend/fake_quantize.in.cpp
     backend/floor.in.cpp
     backend/floor_mod.in.cpp
     backend/function_name.in.cpp
@@ -459,6 +463,7 @@ set(MULTI_TEST_SRC
     backend/parameter_as_output.in.cpp
     backend/power.in.cpp
     backend/prelu.in.cpp
+    backend/prior_box_clustered.in.cpp
     backend/prior_box.in.cpp
     backend/proposal.in.cpp
     backend/psroi_pooling.in.cpp
@@ -529,7 +534,7 @@ if (NGRAPH_ONNX_IMPORT_ENABLE AND NOT NGRAPH_USE_PROTOBUF_LITE)
             onnx/onnx_tensor_names.cpp)
 endif()
 
-if (NGRAPH_ONNX_EDITOR_ENABLE)
+if (NGRAPH_ONNX_IMPORT_ENABLE)
     list(APPEND SRC onnx/onnx_editor.cpp)
     list(APPEND MULTI_TEST_SRC
         onnx/onnx_test_utils.in.cpp
@@ -590,6 +595,10 @@ endif()
 
 target_link_libraries(unit-test PRIVATE ngraph_test_util
                                         ngraph::builder
+                                        ${CMAKE_DL_LIBS}
+                                        ie_backend
+                                        interpreter_backend
+                                        Threads::Threads
                                         openvino::conditional_compilation)
 
 # Protobuf-lite does not support parsing files from prototxt format
@@ -613,23 +622,9 @@ if (OV_COMPILER_IS_CLANG)
     target_compile_options(unit-test PRIVATE -Wno-undef -Wno-reserved-id-macro)
 endif()
 
-# So many type_prop tests these days that we need to set /bigobj flag for MSVC.
-# We should probably split up type_prop.cpp.
-if (MSVC)
-    target_compile_options(unit-test PRIVATE "/bigobj")
-endif()
-
-target_link_libraries(unit-test PRIVATE ie_backend)
-
 if (NGRAPH_ONNX_IMPORT_ENABLE)
     target_link_libraries(unit-test PRIVATE onnx_importer)
 endif()
-
-if (NGRAPH_ONNX_EDITOR_ENABLE)
-    target_link_libraries(unit-test PRIVATE onnx_editor)
-endif()
-
-target_link_libraries(unit-test PRIVATE interpreter_backend)
 
 install(TARGETS unit-test
         RUNTIME DESTINATION tests
@@ -637,9 +632,8 @@ install(TARGETS unit-test
         EXCLUDE_FROM_ALL)
 
 ############ FRONTEND ############
-target_include_directories(unit-test PRIVATE ${FRONTEND_INCLUDE_PATH})
-target_link_libraries(unit-test PRIVATE frontend_manager)
-target_link_libraries(unit-test PRIVATE cnpy)
+target_include_directories(unit-test PRIVATE ${FRONTEND_INCLUDE_PATH} frontend/shared/include)
+target_link_libraries(unit-test PRIVATE frontend_manager cnpy)
 
 add_subdirectory(frontend)
 ### END FRONTEND ###
