--- a/.ci/azure/linux_onnxruntime.yml
+++ b/.ci/azure/linux_onnxruntime.yml
@@ -55,8 +55,7 @@ jobs:
     path: openvino
 
   - script: |
-      branch=`tr -s '\n ' < $(ONNXRUNTIME_UTILS)/version`
-      git clone --branch $branch --single-branch --recursive https://github.com/microsoft/onnxruntime.git $(ONNXRUNTIME_REPO_DIR)
+      git clone --recursive https://github.com/microsoft/onnxruntime.git $(ONNXRUNTIME_REPO_DIR)
     displayName: 'Clone onnxruntime'
 
   - script: |
@@ -112,6 +111,7 @@ jobs:
 
   - script: |
       source $(INSTALL_DIR)/bin/setupvars.sh
+      echo "2021.4" > $(INSTALL_DIR)/deployment_tools/inference_engine/version.txt
       CXXFLAGS="-Wno-error=deprecated-declarations" ./build.sh --config RelWithDebInfo --use_openvino CPU_FP32 --build_shared_lib --parallel --skip_tests --build_dir $(ONNXRUNTIME_BUILD_DIR)
     workingDirectory: $(ONNXRUNTIME_REPO_DIR)
     displayName: 'Build ONNX Runtime'
