--- a/tests/conditional_compilation/test_config.yml
+++ b/tests/conditional_compilation/test_config.yml
@@ -4,11 +4,13 @@
 -
     - model:
         path: ${TESTDATA}/models/mobilenet_v2_1.4_224/mobilenet_v2_1.4_224_i8.xml
+-
     - model:
         path: ${TESTDATA}/models/mobilenet_v2_1.0_224/mobilenet_v2_1.0_224_i8.xml
 -
     - model:
         path: ${TESTDATA}/models/test_model/test_model_fp16.xml
+-
     - model:
         path: ${TESTDATA}/models/test_model/test_model_fp32.xml
 #-
@@ -17,3 +19,13 @@
 -
     - model:
         path: ${TESTDATA}/models/inception_v3/inception_v3_i8.xml
+-
+    - model:
+        path: ${TESTDATA}/models/test_model/test_model_fp16.xml
+    - model:
+        path: ${TESTDATA}/models/test_model/test_model_fp32.xml
+-
+    - model:
+        path: ${TESTDATA}/models/mobilenet_v2_1.4_224/mobilenet_v2_1.4_224_i8.xml
+    - model:
+        path: ${TESTDATA}/models/mobilenet_v2_1.0_224/mobilenet_v2_1.0_224_i8.xml
