--- a/.ci/azure/linux.yml
+++ b/.ci/azure/linux.yml
@@ -293,7 +293,10 @@ jobs:
   - script: cmake -DCOMPONENT=tests -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) -P $(BUILD_LAYER_TESTS_DIR)/cmake_install.cmake
     displayName: 'Install Layer Tests'
 
-  - script: python3 -m pip install openvino-dev --find-links=$(INSTALL_DIR)/tools
+  - script: |
+      set -e
+      python3 -m pip install $(INSTALL_DIR)/tools/openvino-*
+      python3 -m pip install $(INSTALL_DIR)/tools/openvino_dev-*
     displayName: 'Install python wheels'
 
   - script: |
