--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -32,7 +32,11 @@ jobs:
     defaults:
       run:
         shell: bash
-    runs-on: ubuntu-20.04-8-cores
+    runs-on: aks-linux-16-cores
+    container:
+      image: akashchi/ubuntu:python_311
+      volumes:
+        - /mount/caches:/mount/caches
     env:
       CMAKE_BUILD_TYPE: 'Release'
       CMAKE_GENERATOR: 'Ninja'
@@ -50,6 +54,8 @@ jobs:
       MODELS_PATH: ${{ github.workspace }}/testdata
       OV_TEMP: ${{ github.workspace }}/openvino_temp
       PYTHON_STATIC_ARGS: -m "not dynamic_library"
+      CCACHE_DIR: /mount/caches/ccache/ubuntu22_x86_64_Release
+      CCACHE_MAXSIZE: 50G
     steps:
       - name: Clone OpenVINO
         uses: actions/checkout@v4
@@ -124,17 +130,22 @@ jobs:
       # Build
       #
 
+      # - name: Setup ccache
+      #   uses: hendrikmuhs/ccache-action@v1.2
+      #   with:
+      #     max-size: "2000M"
+      #     # Should save cache only if run in the master branch of the base repo
+      #     # github.ref_name is 'ref/PR_#' in case of the PR, and 'branch_name' when executed on push
+      #     save: ${{ github.ref_name == 'master' && 'true' || 'false'  }}
+      #     verbose: 2
+      #     key: ${{ github.job }}-linux
+      #     restore-keys: |
+      #       ${{ github.job }}-linux
+
       - name: Setup ccache
-        uses: hendrikmuhs/ccache-action@v1.2
-        with:
-          max-size: "2000M"
-          # Should save cache only if run in the master branch of the base repo
-          # github.ref_name is 'ref/PR_#' in case of the PR, and 'branch_name' when executed on push
-          save: ${{ github.ref_name == 'master' && 'true' || 'false'  }}
-          verbose: 2
-          key: linux-ubuntu
-          restore-keys: |
-            linux-ubuntu
+        run: |
+          mkdir -p $CCACHE_DIR
+          touch $CCACHE_DIR/testtest
 
       - name: Get number of CPU cores
         uses: SimenB/github-actions-cpu-cores@v2
@@ -282,7 +293,11 @@ jobs:
     defaults:
       run:
         shell: bash
-    runs-on: ubuntu-20.04
+    runs-on: aks-linux-4-cores
+    container:
+      image: akashchi/ubuntu:python_311
+      volumes:
+        - /mount/caches:/mount/caches
     env:
       INSTALL_DIR: ${{ github.workspace }}/install
       INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
@@ -483,7 +498,11 @@ jobs:
     defaults:
       run:
         shell: bash
-    runs-on: ubuntu-20.04
+    runs-on: aks-linux-4-cores
+    container:
+      image: akashchi/ubuntu:python_311
+      volumes:
+        - /mount/caches:/mount/caches
     env:
       OPENVINO_REPO: ${{ github.workspace }}/openvino
       OPENVINO_CONTRIB_REPO: ${{ github.workspace }}/openvino_contrib
@@ -746,7 +765,11 @@ jobs:
     defaults:
       run:
         shell: bash
-    runs-on: ubuntu-20.04-4-cores
+    runs-on: aks-linux-4-cores
+    container:
+      image: akashchi/ubuntu:python_311
+      volumes:
+        - /mount/caches:/mount/caches
     env:
       INSTALL_DIR: ${{ github.workspace }}/install
       INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
