--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Clone OpenVINO
         uses: actions/checkout@v4
         with:
-          path: ${OPENVINO_REPO}
+          path: ${{ env.OPENVINO_REPO }}
           submodules: 'recursive'
 
       - name: Clone OpenVINO Contrib
