Use Ubuntu image from ACR cache for the rest of the stages

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -302,7 +302,7 @@ jobs:
         shell: bash
     runs-on: aks-linux-4-cores
     container:
-      image: akashchi/ubuntu:python_311
+      image: openvino.azurecr.io/dockerhub/ubuntu:22.04
       volumes:
         - /mount/caches:/mount/caches
     env:
@@ -507,7 +507,7 @@ jobs:
         shell: bash
     runs-on: aks-linux-4-cores
     container:
-      image: akashchi/ubuntu:python_311
+      image: openvino.azurecr.io/dockerhub/ubuntu:22.04
       volumes:
         - /mount/caches:/mount/caches
     env:
@@ -774,7 +774,7 @@ jobs:
         shell: bash
     runs-on: aks-linux-4-cores
     container:
-      image: akashchi/ubuntu:python_311
+      image: openvino.azurecr.io/dockerhub/ubuntu:22.04
       volumes:
         - /mount/caches:/mount/caches
     env:
