Trying to disable ccache file cloning

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -59,6 +59,7 @@ jobs:
       CCACHE_DIR: /mount/caches/ccache/ubuntu22_x86_64_Release
       CCACHE_TEMP_DIR: ${{ github.workspace }}/ccache_temp
       CCACHE_NOHARDLINK: "true"
+      CCACHE_NOFILECLONE: "true"
       CCACHE_MAXSIZE: 50G
     steps:
       - name: Install git
@@ -185,9 +186,6 @@ jobs:
             -DOPENVINO_EXTRA_MODULES=${OPENVINO_CONTRIB_REPO}/modules \
             -S ${OPENVINO_REPO} \
             -B ${BUILD_DIR}
-
-      - name: Clean ccache stats
-        run: ccache --zero-stats --show-config
 
       - name: Build
         run: cmake --build ${BUILD_DIR} --parallel ${{ steps.cpu-cores.outputs.count }} --config Release
