Fixed order of dependent cmake options (#19551)
* Fixed order of dependent cmake options

* Update .ci/azure/linux_cuda.yml

fixed typo in option name

--- a/.ci/azure/linux_cuda.yml
+++ b/.ci/azure/linux_cuda.yml
@@ -138,6 +138,7 @@ jobs:
       -DENABLE_PYTHON=OFF
       -DENABLE_NVIDIA=ON
       -DENABLE_TESTS=ON
+      -DENABLE_DATA=OFF
       /root/repos/openvino &&
       /root/w/ninja -v CudaFuncTests CudaUnitTests"
     workingDirectory: $(WORK_DIR)
