changed user permissions

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -508,6 +508,8 @@ jobs:
       image: openvino.azurecr.io/dockerhub/ubuntu:22.04
       volumes:
         - /mount/caches:/mount/caches
+      options: -u 1001:1001
+
     env:
       OPENVINO_REPO: ${{ github.workspace }}/openvino
       OPENVINO_CONTRIB_REPO: ${{ github.workspace }}/openvino_contrib
