--- a/samples/cpp/common/utils/CMakeLists.txt
+++ b/samples/cpp/common/utils/CMakeLists.txt
@@ -17,6 +17,6 @@ find_package(OpenVINO REQUIRED COMPONENTS Runtime)
 
 target_link_libraries(${TARGET_NAME} PUBLIC openvino::runtime PRIVATE ${GFLAGS_TARGET})
 
-if(COMMAND add_clang_format_target)
-    add_clang_format_target(${TARGET_NAME}_clang FOR_TARGETS ${TARGET_NAME})
+if(COMMAND ov_add_clang_format_target)
+    ov_add_clang_format_target(${TARGET_NAME}_clang FOR_TARGETS ${TARGET_NAME})
 endif()
