--- a/src/plugins/intel_gpu/tests/functional/CMakeLists.txt
+++ b/src/plugins/intel_gpu/tests/functional/CMakeLists.txt
@@ -6,10 +6,10 @@ set(TARGET_NAME ov_gpu_func_tests)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     # C4267, 4244 issues from oneDNN headers conversion from 'XXX' to 'YYY', possible loss of data
-    ie_add_compiler_flags(/wd4267)
-    ie_add_compiler_flags(/wd4244)
+    ov_add_compiler_flags(/wd4267)
+    ov_add_compiler_flags(/wd4244)
     # 'initializing': truncation from 'XXX' to 'YYY'
-    ie_add_compiler_flags(/wd4305)
+    ov_add_compiler_flags(/wd4305)
 endif()
 
 addIeTargetTest(
