--- a/src/tests/functional/plugin/conformance/test_runner/op_conformance_runner/CMakeLists.txt
+++ b/src/tests/functional/plugin/conformance/test_runner/op_conformance_runner/CMakeLists.txt
@@ -21,4 +21,4 @@ addIeTargetTest(
             OP_CONFORMANCE
 )
 
-ie_faster_build(${TARGET_NAME} UNITY)
+ov_build_target_faster(${TARGET_NAME} UNITY)
