--- a/src/frontends/tests/frontend/shared/CMakeLists.txt
+++ b/src/frontends/tests/frontend/shared/CMakeLists.txt
@@ -30,4 +30,4 @@ target_compile_definitions(${TARGET_NAME}
         SHARED_LIB_PREFIX="${CMAKE_SHARED_LIBRARY_PREFIX}"
         SHARED_LIB_SUFFIX="${IE_BUILD_POSTFIX}${CMAKE_SHARED_LIBRARY_SUFFIX}")
 
-add_clang_format_target(${TARGET_NAME}_clang FOR_TARGETS ${TARGET_NAME})
+ov_add_clang_format_target(${TARGET_NAME}_clang FOR_TARGETS ${TARGET_NAME})
