--- a/src/plugins/intel_gna/tests/functional/CMakeLists.txt
+++ b/src/plugins/intel_gna/tests/functional/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    ie_add_compiler_flags(-Wno-literal-conversion)
+    ov_add_compiler_flags(-Wno-literal-conversion)
 endif()
 
 set(TARGET_NAME ov_gna_func_tests)
