--- a/src/plugins/template/tests/functional/CMakeLists.txt
+++ b/src/plugins/template/tests/functional/CMakeLists.txt
@@ -6,7 +6,7 @@
 set(TARGET_NAME ov_template_func_tests)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    ie_add_compiler_flags(/wd4305)
+    ov_add_compiler_flags(/wd4305)
 endif()
 
 ov_add_test_target(
