--- a/src/tests/functional/plugin/conformance/test_runner/api_conformance_runner/CMakeLists.txt
+++ b/src/tests/functional/plugin/conformance/test_runner/api_conformance_runner/CMakeLists.txt
@@ -20,4 +20,4 @@ addIeTargetTest(
             API_CONFORMANCE
 )
 
-ie_faster_build(${TARGET_NAME} UNITY)
+ov_build_target_faster(${TARGET_NAME} UNITY)
