--- a/src/tests/functional/plugin/conformance/test_runner/conformance_infra/CMakeLists.txt
+++ b/src/tests/functional/plugin/conformance/test_runner/conformance_infra/CMakeLists.txt
@@ -26,4 +26,4 @@ if(ENABLE_CONFORMANCE_PGQL)
     target_compile_definitions(${TARGET_NAME} PRIVATE ENABLE_CONFORMANCE_PGQL)
 endif()
 
-ie_faster_build(${TARGET_NAME} UNITY)
+ov_build_target_faster(${TARGET_NAME} UNITY)
