--- a/src/tests/ngraph_helpers/ngraph_functions/CMakeLists.txt
+++ b/src/tests/ngraph_helpers/ngraph_functions/CMakeLists.txt
@@ -26,7 +26,7 @@ addIeTarget(
             tests
 )
 
-ie_faster_build(${TARGET_NAME}
+ov_build_target_faster(${TARGET_NAME}
     UNITY
     PCH PRIVATE "src/precomp.hpp"
 )
